[tool.poetry]
name = "coding-100"
version = "0.1.0"
description = ""
authors = ["Ahmed ElSheikh <ahmedhelsheikh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
py7zr = "^0.20.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
